2006-08-27  Brent Smith  <gnome@nextreality.net>

	* modulesets/gnome-2.16.modules: add a patch for scrollkeeper
	* patches/scrollkeeper_empty_url_string.patch: This patch fixes a
	problem where scrollkeeper chokes when it encounters a "url" attribute
	in an OMF file that is empty.  Currently the update-manager-C.omf file
	has this problem (from Ubuntu)

2006-08-23  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* modulesets/gnome-2.16.modules: gnome-power-manager has
	branched gnome-2-16.

2006-08-22  Matthias Clasen <mclasen@redhat.com>

	* modulesets/gnome-2.16.modules: Use stable branches of
	GLib, Pango and GTK+

2006-08-22  Frederic Crozat  <fcrozat@mandriva.com>

	* modulesets/gnome-2.16.modules:
	Remove gnopernicus from meta-gnome-desktop.
	Add new libcm module (for brave compiling compositor in metacity).

2006-08-20  Brent Smith  <gnome@nextreality.net>

	* modulesets/freedesktop.modules: add a hal-0-5-7 tarball
	* modulesets/gnome-2.16.modules: modify all dependencies on hal to use
	hal-0-5-7 instead
	* patches/hal-dbus_connection_close.patch: patch to fix compilation
	errors when using hal-0-5-7 with latest dbus.

2006-08-18  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-2.16.modules: move accepted modules to
	meta-gnome-desktop

2006-08-17  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.16.modules: Use specific branches of pwlib and
	opal, required for GNOME 2.14 Ekiga.

2006-08-14  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.16.modules: Build "xulrunner" component of
	mozilla, not "browser".

2006-08-14  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.16.modules: Switch to xulrunner 1.8.
	Fix bug #324546.

2006-08-10  Frederic Peters  <fpeters@0d.be>

	* Makefile: removed changecvsroot.py from make dist; it has been moved
	to scripts/; added scripts/ and its content to make dist.

2006-08-10  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* modulesets/gnome-2.16.modules: Added nautilus-sendto,