@@ -1,3 +1,11 @@
+2006-08-30  Gustavo Carneiro  <gjc@gnome.org>
+
+	reviewed by: James Henstridge
+
+	* jhbuild/versioncontrol/bzr.py: Register (urlparse.uses_relative,
+	urlparse.uses_netloc) the sftp URI scheme with urlparse.
+	Fixes bug #349546: "bzr backend doesn't accept sftp:// URLs".
+
 2006-08-27  Brent Smith  <gnome@nextreality.net>
 
 	* modulesets/gnome-2.16.modules: add a patch for scrollkeeper
